flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflow__c/PersonalWorkflow__c.object-meta.xml
<CustomObject>
    <label>Personal Workflow</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PersonalWorkflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>