flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflow__c/fields/Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Action_Description__c</fullName>
    <label>Action Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>