flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflow__c/fields/Trigger_Description__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Description__c</fullName>
    <label>Trigger Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>