flow_apps/PersonalWorkflow/force-app/main/default/objects/PersonalWorkflow__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <label>Unique Name</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>